--- a/XiaoYuan3.0/Base.lproj/Main.storyboard
+++ b/XiaoYuan3.0/Base.lproj/Main.storyboard
@@ -1,14 +1,118 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3Wc-bP-cgC">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--User View Controller-->
+        <scene sceneID="KqZ-Ch-oYx">
+            <objects>
+                <viewController storyboardIdentifier="UserViewController" id="gGe-m0-zql" customClass="UserViewController" customModule="XiaoYuan3_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="D88-lx-FRt"/>
+                        <viewControllerLayoutGuide type="bottom" id="N4B-p7-98C"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="oOR-Ag-9V6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KJ2-Db-gKZ">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="VE8-Pa-OQg">
+                                        <barButtonItem key="leftBarButtonItem" title="&lt;返回" id="XHN-wy-qWS">
+                                            <connections>
+                                                <action selector="back:" destination="gGe-m0-zql" id="rcd-GE-pGn"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="P0L-Dc-UbK">
+                        <nil key="title"/>
+                        <barButtonItem key="leftBarButtonItem" title="用户" id="vpe-9K-dCi">
+                            <connections>
+                                <segue destination="1ql-Mp-E74" kind="popoverPresentation" popoverAnchorBarButtonItem="vpe-9K-dCi" id="COC-Vy-xQh">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
+                            </connections>
+                        </barButtonItem>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="GpL-Sb-4at">
+                            <rect key="frame" x="113" y="7" width="150" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="First"/>
+                                <segment title="Second"/>
+                            </segments>
+                        </segmentedControl>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Ya7-0N-sj1"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="backbtn" destination="XHN-wy-qWS" id="GTR-po-15H"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fg7-uv-dft" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-839" y="106"/>
+        </scene>
+        <!--我的信息-->
+        <scene sceneID="YPp-06-ibC">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7ol-E4-04c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="1ql-Mp-E74" customClass="ContactViewController" customModule="XiaoYuan3_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bRZ-tB-iL5"/>
+                        <viewControllerLayoutGuide type="bottom" id="zpV-UX-YiL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="FxZ-fp-bhu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fbL-sK-RzU">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="aYX-AV-tl1">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aYX-AV-tl1" id="UMa-do-vTK">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O8P-M3-VQU">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="dtD-Hw-mrb"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="我的信息" id="OP6-Cm-XD6">
+                        <barButtonItem key="rightBarButtonItem" title="设置" id="9nJ-Yd-Gu4"/>
+                    </navigationItem>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="-71.200000000000003" y="-440.32983508245883"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="XiaoYuan3_0" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +120,119 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Hello World" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXg-c8-uMI">
+                                <rect key="frame" x="127" y="323" width="121" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0qK-IT-EK6">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </navigationBar>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CQL-V8-xok">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem id="t7S-SZ-Xc0">
+                                        <nil key="title"/>
+                                        <barButtonItem key="leftBarButtonItem" title="用户" id="X2x-Qc-jNK"/>
+                                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="nz7-Vk-IIm">
+                                            <rect key="frame" x="112.5" y="7" width="150" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <segments>
+                                                <segment title="信息"/>
+                                                <segment title="联系人"/>
+                                            </segments>
+                                        </segmentedControl>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="4JI-O3-9W5"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="bXg-c8-uMI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lM9-ox-wAJ"/>
+                            <constraint firstItem="bXg-c8-uMI" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ppX-jY-uTu"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="B7b-Ca-Ypn"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="924" y="-328"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="Zya-iy-003">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vfz-WQ-wH8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="mdY-pb-9kJ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1Qa-Kk-cIA"/>
+                        <viewControllerLayoutGuide type="bottom" id="0oV-v7-uTk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VTp-4h-9dB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="W2n-tf-QGu"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="-2522" y="742"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="1jA-tS-MYS">
+            <objects>
+                <tabBarController id="98u-M1-kxb" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="ITQ-2N-uJe">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="mdY-pb-9kJ" kind="relationship" relationship="viewControllers" id="uAy-GK-bAS"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8GS-fv-txm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3258" y="1002"/>
+        </scene>
+        <!--Navigation View Controller-->
+        <scene sceneID="5bd-yp-THR">
+            <objects>
+                <navigationController storyboardIdentifier="NavigationViewController" id="3Wc-bP-cgC" customClass="NavigationViewController" customModule="XiaoYuan3_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sNx-gh-5gu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="gGe-m0-zql" kind="relationship" relationship="rootViewController" id="KoZ-QZ-IYT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a0T-Og-b0P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1684" y="886"/>
+        </scene>
+        <!--Hello-->
+        <scene sceneID="iEG-e7-Maa">
+            <objects>
+                <viewController storyboardIdentifier="FriendsViewController" id="dfm-Cl-msQ" customClass="FriendsViewController" customModule="XiaoYuan3_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3ED-Am-fFB"/>
+                        <viewControllerLayoutGuide type="bottom" id="QP0-m1-cI6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2NK-6N-25Z">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Hello" id="vza-Zh-3Qd"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uXQ-D1-huM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-740" y="934"/>
         </scene>
     </scenes>
 </document>
